@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4441] Fix FC issue when parent is constraint and trying to change default template
 - [#4764] Fix issue with timestamp display on manager log page
 - [#4680] Fix javascript error when typing Template name
 - [#4681] Fix path issue which was causing 404 errors in the manager, IE 7-9
